--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 KEYWORDSAI_BASE_URL="https://api.keywordsai.co/api"
 KEYWORDSAI_API_KEY="yf4XScSu.BddinxnSGyk0oy28sEvuV6PAN35ldkBj"
-OPENAI_API_KEY="AIzaSyAiyC6YRIncqzOyh96a1HJ315-HjvhSNj0"
+GEMINI_API_KEY=AIzaSyAiyC6YRIncqzOyh96a1HJ315-HjvhSNj0
